# sanctuary-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  conftest.py  langgraph.json  pyproject.toml
src/: app.py  app_test.py  auth.py  auth_test.py  config.py  config_test.py
src/db/: client.py  client_test.py  database_types.py  schema.sql
src/eval/: dataset.py  dataset_test.py  evaluators.py  evaluators_test.py  examples.py  jury.py  jury_test.py  run.py  run_test.py  target.py  target_test.py
src/prompts/: manager.py  manager_test.py  push.py
src/routers/: chat.py  chat_test.py  ingest.py  ingest_test.py
src/schemas/: chat.py  chat_schema_test.py
src/services/: exceptions.py  exceptions_test.py  ingestion.py  ingestion_test.py  retrieval.py  retrieval_test.py
src/services/strategies/: agentic_rag.py  agentic_rag_test.py  core.py  core_test.py  multi_query.py  multi_query_test.py  naive_rag.py  naive_rag_test.py  query_rewrite.py  query_rewrite_test.py  registry.py  registry_test.py  self_correcting.py  self_correcting_test.py  step_back.py  step_back_test.py
supabase/: config.toml  snippets.md
